components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__chi_square_and_lrt_reference_values.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: out
---
statistic  df  p
    0.500  1   4.795001e-1
    0.500  2   7.788008e-1
    0.500  3   9.188914e-1
    0.500  4   9.735010e-1
    1.000  1   3.173105e-1
    1.000  2   6.065307e-1
    1.000  3   8.012520e-1
    1.000  4   9.097960e-1
    2.000  1   1.572992e-1
    2.000  2   3.678794e-1
    2.000  3   5.724067e-1
    2.000  4   7.357589e-1
    3.841  1   5.001368e-2
    3.841  2   1.465337e-1
    3.841  3   2.791530e-1
    3.841  4   4.279516e-1
    5.000  1   2.534732e-2
    5.000  2   8.208500e-2
    5.000  3   1.717971e-1
    5.000  4   2.872975e-1
    6.635  1   9.999420e-3
    6.635  2   3.624333e-2
    6.635  3   8.448781e-2
    6.635  4   1.564806e-1
   10.000  1   1.565402e-3
   10.000  2   6.737947e-3
   10.000  3   1.856614e-2
   10.000  4   4.042768e-2
   10.828  1   9.997657e-4
   10.828  2   4.453789e-3
   10.828  3   1.269325e-2
   10.828  4   2.856661e-2
   20.000  1   7.744216e-6
   20.000  2   4.539993e-5
   20.000  3   1.697424e-4
   20.000  4   4.993992e-4
   50.000  1   1.537460e-12
   50.000  2   1.388794e-11
   50.000  3   7.989179e-11
   50.000  4   3.610865e-10

lrt (reference, candidate, df, direction)
1000 990 1 forward: LrtResult { delta_ofv: -10.0, statistic: 10.0, df: 1, p_value: 0.0015654022580025495 }
1000 1005 1 forward: LrtResult { delta_ofv: 5.0, statistic: 0.0, df: 1, p_value: 1.0 }
1000 990 2 forward: LrtResult { delta_ofv: -10.0, statistic: 10.0, df: 2, p_value: 0.006737946999085472 }
1000 1015 1 backward: LrtResult { delta_ofv: 15.0, statistic: 15.0, df: 1, p_value: 0.00010751117672950068 }
1000 1000.5 1 backward: LrtResult { delta_ofv: 0.5, statistic: 0.5, df: 1, p_value: 0.47950012218695337 }
1000 995 1 backward: LrtResult { delta_ofv: -5.0, statistic: 0.0, df: 1, p_value: 1.0 }
