components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__every_build_plan_error_message.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: out
---
unknown_name
  no theta named AGE_CL in the initial model
  named by a comment: CRCL_CL, TVCL, TVKA, TVV, WT_CL, WT_V
ambiguous_name
  covariate name WT_V is ambiguous in the initial model: it names THETA(3) and THETA(6)
rename one of them, or request the name that identifies only the one you mean
model_names_no_theta
  no theta named WT_CL in the initial model
  no $THETA record in this model carries a comment naming it, so no covariate effect can be requested; give each candidate theta its own $THETA record with a comment naming it, e.g. `$THETA (0 FIX)   ; WT_CL`
repeat_spec_shares_one_comment
  covariate name WT_CL is ambiguous in the initial model: it names THETA(4) and THETA(5) and THETA(6)
rename one of them, or request the name that identifies only the one you mean
no_comment
  no theta named WT_V in the initial model
  named by a comment: CRCL_CL, TVCL, TVKA, TVV, WT_CL
type1_comment_leading_with_a_number
  no theta named WT_V in the initial model
  named by a comment: CRCL_CL, TVCL, TVKA, TVV, WT_CL
comment_no_dialect_parses
  no theta named WT_V in the initial model
  named by a comment: CRCL_CL, TVCL, TVKA, TVV, WT_CL
nmtran_label
  no theta named WT_V in the initial model
  named by a comment: CRCL_CL, TVCL, TVKA, TVV, WT_CL
nmtran_names_record
  no theta named WT_V in the initial model
  named by a comment: CRCL_CL, TVCL, TVKA, TVV, WT_CL
duplicate_names
  covariate name wt_cl is requested more than once
empty_name
  covariates contains an empty name
empty_list
  [covariates] effects must name at least one theta, e.g. effects = ["WT_CL", "CRCL_CL"]
no_estimation_record
  initial model [TMP]/no_estimation_record/1001.mod has no $ESTIMATION record
direction_empty
  direction must contain 'forward', 'backward', or both
direction_duplicated
  direction contains 'forward' more than once
forward_alpha_zero
  forward_alpha must be in (0, 1), got 0
backward_alpha_one
  backward_alpha must be in (0, 1), got 1
num_rounds_zero
  num_rounds must be at least 1
initial_equals_off_row
  WT_CL: initial (1) equals fixed (1): an effect whose initial estimate is its held-out value is not tested at all
initial_equals_off_defaults
  [covariates] initial (0) equals fixed (0): an effect whose initial estimate is its held-out value is not tested at all
initial_nan
  WT_CL: initial must be a finite number, got NaN
off_infinite
  [covariates] fixed must be a finite number, got inf
lower_above_upper_defaults
  [covariates] lower (1) must be below upper (0)
initial_at_lower
  WT_CL: initial (0.1) must be above lower (0.1); NM-TRAN rejects an initial estimate at or outside its bounds
initial_above_upper
  WT_CL: initial (0.5) must be below upper (0.2); NM-TRAN rejects an initial estimate at or outside its bounds
missing_dataset
  dataset data.csv referenced by $DATA of [TMP]/missing_dataset/1001.mod does not exist: Dataset "[TMP]/missing_dataset/data.csv" not found
missing_model
  Model file does not exist: [TMP]/nope.mod
bad_extension
  Model file [TMP]/bad_extension/1001.txt has unsupported extension '.txt': only .mod and .ctl are allowed
