components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__every_config_error_message.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: out
---
unknown_key
  failed to parse SCM config [TMP]/unknown_keyscm.toml: TOML parse error at line 3, column 1
  |
3 | foward_alpha = 0.01
  | ^^^^^^^^^^^^
unknown field `foward_alpha`, expected one of `model`, `covariates`, `direction`, `forward_alpha`, `backward_alpha`, `max_retries`, `cov_step`, `forward_final_cov_step`, `final_cov_step`

theta_numbers
  failed to parse SCM config [TMP]/theta_numbersscm.toml: TOML parse error at line 4, column 12
  |
4 | effects = [4, 5, 6]
  |            ^
invalid type: integer `4`, expected a theta name ("WT_CL") or a row ({ name = "WT_CL", type = "continuous", fixed = 0 })

row_without_name
  failed to parse SCM config [TMP]/row_without_namescm.toml: TOML parse error at line 4, column 12
  |
4 | effects = [{ initial = 0.2 }]
  |            ^^^^^^^^^^^^^^^^^
missing field `name`

row_with_unknown_key
  failed to parse SCM config [TMP]/row_with_unknown_keyscm.toml: TOML parse error at line 4, column 30
  |
4 | effects = [{ name = "WT_CL", init = 0.2 }]
  |                              ^^^^
unknown field `init`, expected one of `name`, `type`, `initial`, `fixed`, `lower`, `upper`

section_with_unknown_key
  failed to parse SCM config [TMP]/section_with_unknown_keyscm.toml: TOML parse error at line 4, column 1
  |
4 | inital = 0.2
  | ^^^^^^
unknown field `inital`, expected one of `fixed`, `continuous`, `categorical`, `effects`

missing_covariates
  failed to parse SCM config [TMP]/missing_covariatesscm.toml: TOML parse error at line 1, column 1
  |
1 | model = "1001.mod"
  | ^
missing field `covariates`

missing_direction
  failed to parse SCM config [TMP]/missing_directionscm.toml: TOML parse error at line 1, column 1
  |
1 | model = "1001.mod"
  | ^
missing field `direction`

missing_model
  failed to parse SCM config [TMP]/missing_modelscm.toml: TOML parse error at line 1, column 1
  |
1 | direction = ["forward"]
  | ^
missing field `model`

malformed_toml
  failed to parse SCM config [TMP]/malformed_tomlscm.toml: TOML parse error at line 1, column 9
  |
1 | model = 
  |         ^
string values must be quoted, expected literal string

misspelled_direction
  failed to parse SCM config [TMP]/misspelled_directionscm.toml: TOML parse error at line 2, column 14
  |
2 | direction = ["foward"]
  |              ^^^^^^^^
unknown variant `foward`, expected `forward` or `backward`

unresolvable_model
  Model file does not exist: [TMP]/nope/1001.mod
empty_effects
  [covariates] effects must name at least one theta, e.g. effects = ["WT_CL", "CRCL_CL"]
initial_equals_off
  [covariates] continuous initial (0) equals fixed (0): an effect whose initial estimate is its held-out value is not tested at all
missing_config_file
  failed to read SCM config [TMP]/absentscm.toml: failed to open file `[TMP]/absentscm.toml`: No such file or directory (os error 2)
