components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__final_model_of_a_completed_run.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: read(&final_model)
---
$PROBLEM scm template
$INPUT ID TIME AMT DV WT CRCL AGE
$DATA ../../../data.csv IGNORE=@
$SUBROUTINES ADVAN2 TRANS2
$PK
WT_CL = (WT/70)**THETA(4)
CRCL_CL = (CRCL/100)**THETA(5)
WT_V = (WT/70)**THETA(6)
CL = THETA(1) * WT_CL * CRCL_CL * EXP(ETA(1))
V  = THETA(2) * WT_V * EXP(ETA(2))
KA = THETA(3)
S2 = V
$ERROR
Y = F * (1 + EPS(1))
$THETA (0, 3.1)    ; TVCL (L/h)
$THETA (0, 21)   ; TVV (L)
$THETA (0, 1.3)  ; TVKA (1/h)
$THETA 0.25   ; WT_CL cov
$THETA (0 FIX)   ; CRCL_CL cov
$THETA (0 FIX)   ; WT_V cov
$OMEGA 0.08
$OMEGA 0.085
$SIGMA 0.018
$ESTIMATION METHOD=1 INTER MAXEVAL=9999 NOABORT
$COVARIANCE
