components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__full@categorical.mod.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "model_or_error(result, &full)"
input_file: components/nonmem/test_data/scm/templates/categorical.mod
---
$PROBLEM scm template (categorical effect)
; candidates: WT_CL CRCL_CL WT_V SEX_CL
$INPUT ID TIME AMT DV WT CRCL AGE SEX
$DATA ../../../data.csv IGNORE=@
$SUBROUTINES ADVAN2 TRANS2
$PK
WT_CL = (WT/70)**THETA(4)
CRCL_CL = (CRCL/100)**THETA(5)
WT_V = (WT/70)**THETA(6)
IF (SEX.EQ.1) THEN
  SEX_CL = 1 + THETA(7)
ELSE
  SEX_CL = 1
ENDIF
CL = THETA(1) * WT_CL * CRCL_CL * SEX_CL * EXP(ETA(1))
V  = THETA(2) * WT_V * EXP(ETA(2))
KA = THETA(3)
S2 = V
$ERROR
Y = F * (1 + EPS(1))
$THETA (0, 3)    ; TVCL (L/h)
$THETA (0, 20)   ; TVV (L)
$THETA (0, 1.2)  ; TVKA (1/h)
$THETA 0.1   ; WT_CL cov
$THETA 0.1   ; CRCL_CL cov
$THETA 0.1   ; WT_V cov
$THETA 0.1   ; SEX_CL cov
$OMEGA 0.1
$OMEGA 0.1
$SIGMA 0.02
$ESTIMATION METHOD=1 INTER MAXEVAL=9999 NOABORT
$COVARIANCE
